<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokemon_number_format">#%d</string>

    <!-- Error and toast messages -->
    <string name="error_message_getting_data_from_server">Something went wrong. Server is not available.</string>
    <string name="error_message_fail_to_get_evolution_chain">Something went wrong. Fail to get evolutions chain.</string>
    <string name="error_message_getting_data_from_db">Something went wrong. Please, try to clean db cache.</string>
    <string name="error_message_write_data_to_database">Something went wrong. Please, try to clean db cache.</string>
    <string name="error_message_fail_to_load_image">Fail to load image!</string>
    <string name="toast_message_file_loaded_successfully">Image is loaded %s!</string>

    <!-- Pokemon info tabs -->
    <string name="tab_about">About</string>
    <string name="tab_base_stats">Base stats</string>
    <string name="tab_evolutions">Evolutions</string>

    <!-- Pokemon info stats tab -->
    <string name="stat_hp">HP</string>
    <string name="stat_attack">Attack</string>
    <string name="stat_defense">Defense</string>
    <string name="stat_sp_atk">Sp. Atk</string>
    <string name="stat_sp_def">Sp. Def</string>
    <string name="stat_speed">Speed</string>
    <string name="stat_total">Total</string>
    <string name="total_value">Total value: %d</string>

    <!-- Pokemon info about tab -->
    <string name="about_species">Species</string>
    <string name="about_height">Height</string>
    <string name="about_weight">Weight</string>
    <string name="about_abilities">Abilities</string>
    <string name="about_height_value">%.1f m</string>
    <string name="about_weight_value">%.1f kg</string>

    <!-- Pkemon info evolution tab -->
    <string name="title_evolution_chain">Evolution Chain</string>

    <!-- Action names-->
    <string name="menu_item_add_to_favourites">Add to my collection</string>
    <string name="menu_item_remove_from_favourites">Remove from my collection</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_open_special_model">Open special model</string>

    <!-- Permissions textx -->
    <string name="external_storage_permission_title">Allow access to the internal memory of the device.</string>
    <string name="external_storage_permission_message">To load image you need to permit external storage access!</string>
    <string name="rationale_permission_button">Allow</string>
    <string name="dont_ask_again_permission_button">Settings</string>
    <string name="bottom_tab_catalog">Catalog</string>
    <string name="bottom_tab_search">Search</string>
    <string name="bottom_tab_collection">Collection</string>
    <string name="title_pokemon_catalog">Pokemon Catalog</string>
    <string name="title_global_search">Global Search</string>
    <string name="title_my_collection">My Collection</string>
    <string name="search_textview_default_message">Enter the Pokémon name in the search bar to get started.</string>
    <string name="search_textview_error_message">No Pokémons found. Check the spellings and try again.</string>
    <string name="this_pokemon_does_not_evolute">This pokemon does not evolute</string>
</resources>