<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/indent_24"
    android:layout_marginTop="@dimen/indent_16">

    <TextView
        android:id="@+id/hpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_hp"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/stat_attack"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hpText" />

    <TextView
        android:id="@+id/defenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/stat_defense"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attackText" />

    <TextView
        android:id="@+id/spAttackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/stat_sp_atk"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/defenseText" />

    <TextView
        android:id="@+id/spDefenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/stat_sp_def"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spAttackText" />

    <TextView
        android:id="@+id/speedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/stat_speed"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spDefenseText" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/stat_total"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speedText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />


    <TextView
        android:id="@+id/hpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="45" />

    <TextView
        android:id="@+id/attackValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/hpValue"
        tools:text="60" />

    <TextView
        android:id="@+id/defenseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/attackValue"
        tools:text="65" />

    <TextView
        android:id="@+id/spAttackValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/defenseValue"
        tools:text="50" />

    <TextView
        android:id="@+id/spDefenseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/spAttackValue"
        tools:text="44" />

    <TextView
        android:id="@+id/speedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/spDefenseValue"
        tools:text="70" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/speedValue"
        tools:text="366" />

    <TextView
        android:id="@+id/typeDefensesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_16"
        android:text="@string/title_type_defences"
        android:textAppearance="@style/TextAppearance.Bold.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalText" />

    <TextView
        android:id="@+id/typeDefensesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeDefensesTitle"
        tools:text="The effectiveness of each type on Charmander" />
</androidx.constraintlayout.widget.ConstraintLayout>