<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:paddingBottom="@dimen/indent_12"
    android:layout_marginHorizontal="@dimen/indent_24"
    android:layout_marginTop="@dimen/indent_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp">

    <TextView
        android:id="@+id/speciesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_16"
        android:text="@string/about_species"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/about_height"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speciesText" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/about_weight"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heightText" />

    <TextView
        android:id="@+id/abilitiesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:text="@string/about_abilities"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

    <TextView
        android:id="@+id/speciesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_16"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Seed" />

    <TextView
        android:id="@+id/heightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/speciesValue"
        tools:text="2.3" />

    <TextView
        android:id="@+id/weightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/heightValue"
        tools:text="Weight" />

    <TextView
        android:id="@+id/abilitiesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:textAppearance="@style/TextAppearance.Regular.14"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/weightValue"
        tools:text="Abilities" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/indent_16"
        android:layout_marginTop="@dimen/indent_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abilitiesText"
        tools:text="aledkjfh ;skdlnvbfj lksednfjr lakejnfrg alkefnjgr alekjfgnrjkfnkarjbfdjvbh,ab
        kjewnfarjkebnj skjvnjesrbvk jksnjnrjsk jlnjfknjergnjsrnegjrksgv.rj kjnrfksjrenvj kjnsrjvnjrkvb
        .zksjrnfkjenrgjk. kjsngjkrebgjk jksnr sjkdnrgjr" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>